<resources>
    <string name="app_name">AndroidDrinkSodaProject</string>
    <string name="app_updated_modified_name">Drink Shop</string>

    <string name="FACEBOOK_APP_ID">215009362440219</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">36f37fd781566a5c2bc182449a1be1a7</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="place_order">Place Order</string>
    <string name="original_tea">Original Tea</string>
    <string name="skip_for_now">SKIP FOR NOW</string>
    <string name="register_or_login">REGISTER OR LOGIN</string>
    <string name="comment">Comment</string>
    <string name="choose_cup_size">Choose Cup Size</string>
    <string name="size_m">Size M</string>
    <string name="size_l">Size L</string>
    <string name="_0">+$0</string>
    <string name="_3">+$3</string>
    <string name="choose_sugar_amount">Choose Sugar Amount</string>
    <string name="sugar_free">Sugar Free</string>
    <string name="cold_quantity">Cold Quantity</string>
    <string name="required">REQUIRED</string>
    <string name="_100">100 %</string>
    <string name="_75">75 %</string>
    <string name="_50">50 %</string>
    <string name="_25">25 %</string>
    <string name="ice_free">Ice Free</string>
    <string name="toppings">Toppings</string>
    <string name="optional">OPTIONAL</string>
    <string name="_3_75">$ 3.75</string>
    <string name="sugar_100">Sugar : 100%</string>
    <string name="ice_100">Ice : 100%</string>
    <string name="topping_extras">Topping extras</string>
    <string name="milk_cream">Milk Cream</string>
    <string name="_15">$ 15</string>
    <string name="price">Price</string>
    <string name="delete">DELETE</string>
    <string name="_200">$ 200</string>
    <string name="milk_tea">Milk Tea</string>
    <string name="drink">Drink</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="user_s_address">User\'s Address</string>
    <string name="other_address">Other Address</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="sign_out">Sign Out</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="our_popular_products">OUR POPULAR PRODUCTS</string>

</resources>
