<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_product"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_cart_product_name"
                        android:text="@string/milk_tea"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_cart_product_price"
                        android:text="@string/_3_75"
                        android:textSize="16sp"
                        android:padding="4dp"
                        android:textStyle="bold"
                        android:background="@drawable/text_round"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txt_sugar"
                            android:text="@string/sugar_100"
                            android:textSize="14sp"
                            android:layout_weight="1"
                            android:textStyle="italic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/txt_ice"
                            android:text="@string/ice_100"
                            android:textSize="14sp"
                            android:layout_weight="1"
                            android:textStyle="italic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/topping_extras"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/txt_topping_extras"
                android:text="@string/milk_cream"
                android:textStyle="italic"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>